infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/websocket-services: "meetings-srv"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.sellskill.online"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"  
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,accesstoken"  # CORS Allow Headers setting
    nginx.ingress.kubernetes.io/cross-origin-opener-policy: "same-origin"
spec:
  rules:
    - host: server.sellskill.online
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /career/?(.*)
            pathType: Prefix
            backend:
              service:
                name: career-srv
                port:
                  number: 3001
          - path: /interview/?(.*)
            pathType: Prefix
            backend:
              service:
                name: interview-srv
                port:
                  number: 3002
          - path: /chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-srv
                port:
                  number: 3004
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-srv
                port:
                  number: 3004
